Inyección de depencias condicional con la anotación ConditionalOnProperty

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.servlet.context-path=/sistema/api/v1
 spring.application.name=Tuto con Spring Boot
 server.port=8000
+
+service.products=json
