Diferir la Inyección de Beans con la anotación Lazy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.servlet.context-path=/sistema/api/v1
 spring.application.name=Tuto con Spring Boot
 server.port=8000
 
-service.products=json
+service.products=list
