Externalización de configuración

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.application.name=Tuto con Spring Boot
 server.port=8000
 
 service.products=list
+
+# Configuración personalizada de la aplicación
+app.name="Sistema de productos"
+app.version=1.0.0
+app.autor=devparada
+app.language=es
+app.country=Espana
